--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,11 @@ spring.datasource.password=1234
 server.port=5980
 
 # Hibernate settings
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+graphql.graphiql.enabled=true
+graphql.graphiql.cdn.enabled=true
+graphql.graphiql.base-path=/graphiql
+graphql.graphiql.endpoint.graphql=/graphql
+
