--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,12 @@
             <version>12.0.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.graphql</groupId>
+            <artifactId>spring-graphql</artifactId>
+            <version>1.3.1</version>
+        </dependency>
+
         <!-- Spring Boot Starter Test -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -71,6 +77,7 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
 
 
     <build>
